--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'java'
     id 'io.freefair.lombok' version '5.2.1'
+    id 'io.qameta.allure' version '2.9.6'
 }
 
 group = 'ru.netology'
@@ -9,6 +10,13 @@ version = '1.0-SNAPSHOT'
 sourceCompatibility = 11
 compileJava.options.encoding = "UTF-8"
 compileTestJava.options.encoding = "UTF-8"
+
+allure {
+    version = '2.16.1'
+    useJUnit5 {
+        version = '2.16.1'
+    }
+}
 
 repositories {
     mavenCentral()
@@ -19,6 +27,7 @@ dependencies {
     testImplementation group: 'com.codeborne', name: 'selenide', version: '6.19.0'
     testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
     testImplementation 'commons-dbutils:commons-dbutils:1.7'
+    testImplementation 'io.qameta.allure:allure-selenide:2.20.1'
     testImplementation 'org.postgresql:postgresql:42.2.27'
     testImplementation group: 'io.rest-assured', name: 'rest-assured', version: '5.3.2'
     testImplementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.5'
@@ -26,7 +35,11 @@ dependencies {
 
 test {
     useJUnitPlatform()
-    systemProperty 'db.url', System.getProperty('db.url', "jdbc:postgresql://localhost:5432/app")
     systemProperty 'db.user', System.getProperty('db.user', 'app')
     systemProperty 'db.password', System.getProperty('db.password', 'pass')
+
+    // Для запуска тестов с определённой базой данных раскомментируйте нужную строку
+    //systemProperty 'db.url', System.getProperty('db.url', 'jdbc:mysql://localhost:3306/app')
+    systemProperty 'db.url', System.getProperty('db.url', "jdbc:postgresql://localhost:5432/app")
+
 }
