--- a/build.gradle
+++ b/build.gradle
@@ -39,7 +39,7 @@ test {
     systemProperty 'db.password', System.getProperty('db.password', 'pass')
 
     // Для запуска тестов с определённой базой данных раскомментируйте нужную строку
-    //systemProperty 'db.url', System.getProperty('db.url', 'jdbc:mysql://localhost:3306/app')
-    systemProperty 'db.url', System.getProperty('db.url', "jdbc:postgresql://localhost:5432/app")
+    systemProperty 'db.url', System.getProperty('db.url', 'jdbc:mysql://localhost:3306/app')
+    //systemProperty 'db.url', System.getProperty('db.url', "jdbc:postgresql://localhost:5432/app")
 
 }
