--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     testImplementation 'org.postgresql:postgresql:42.2.27'
     testImplementation group: 'io.rest-assured', name: 'rest-assured', version: '5.3.2'
     testImplementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.5'
+    testImplementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.32'
 }
 
 test {
@@ -39,7 +40,7 @@ test {
     systemProperty 'db.password', System.getProperty('db.password', 'pass')
 
     // Для запуска тестов с определённой базой данных раскомментируйте нужную строку
-    //systemProperty 'db.url', System.getProperty('db.url', 'jdbc:mysql://localhost:3306/app')
-    systemProperty 'db.url', System.getProperty('db.url', "jdbc:postgresql://localhost:5432/app")
+    systemProperty 'db.url', System.getProperty('db.url', 'jdbc:mysql://localhost:3306/app')
+    //systemProperty 'db.url', System.getProperty('db.url', "jdbc:postgresql://localhost:5432/app")
 
 }
